--- a/package.json
+++ b/package.json
@@ -28,16 +28,20 @@
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-camera": "^4.2.1",
     "react-native-code-push": "^7.0.4",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.6.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.0",
+    "react-native-permissions": "^3.2.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-push-notification": "^8.1.1",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.2.3",
     "react-native-safe-area-context": "^3.3.2",
@@ -54,6 +58,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "save": "^2.4.0",
+    "validator": "^13.7.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
