--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,11 +12,17 @@ target 'ALSConnect' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'ALSConnectTests' do
     inherit! :complete
     # Pods for testing
   end
+  permissions_path = '../node_modules/react-native-permissions/ios'
 
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
+  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
