--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "hermes-engine": "0.5.2-rc1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "npm": "^8.3.0",
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-native": "0.66.1",
@@ -35,7 +37,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.6.0",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-keyboard-aware-scroll-view": "github:APSL/react-native-keyboard-aware-scroll-view#pull/501/head",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^13.0.0",
     "react-native-permissions": "^3.2.0",
