--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>21855797468-qk81nguf9lif7qdalfg9jmtd72m0bhpc.apps.googleusercontent.com</string>
+	<string>21855797468-mb670hpfnas4ijsidg6gl5h3fpkrn7bk.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.21855797468-qk81nguf9lif7qdalfg9jmtd72m0bhpc</string>
+	<string>com.googleusercontent.apps.21855797468-mb670hpfnas4ijsidg6gl5h3fpkrn7bk</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBbC_3cOElzglgw0X9pbm-3-3vACNwtBNI</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.alsconnect</string>
+	<string>org.reactjs.native.example.ALSConnect</string>
 	<key>PROJECT_ID</key>
 	<string>rn-complete-guide-6c06b</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:21855797468:ios:4659606be128131ad9f419</string>
+	<string>1:21855797468:ios:e26ce98c113d751cd9f419</string>
 	<key>DATABASE_URL</key>
 	<string>https://rn-complete-guide-6c06b-default-rtdb.firebaseio.com</string>
 </dict>
