--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-calendar-picker": "^7.1.2",
     "react-native-camera": "^4.2.1",
     "react-native-code-push": "^7.0.4",
+    "react-native-date-picker": "^4.1.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.6.0",
     "react-native-iphone-x-helper": "^1.3.1",
